--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
+:root {
+  --primary-color: #34537e;
+  --secondary-color: #d0417e;
+  --light-color: #f9f9f9;
+  --dark-color: #2b334f;
+  --medium-color: #ddd;
+}
+
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  box-sizing: border-box;
+  margin: 0;
+  font-size: smaller;
 }
